[tool.poetry]
name = "carlinhf"
version = "0.1.0"
description = "CARLIN help functions"
authors = ["Shou-Wen Wang <wangsw09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"